--- a/index.html
+++ b/index.html
@@ -40,6 +40,6 @@
         </div>
     </div>
 
-    <script src="bouncing_ball.js"></script>
+    <script src="experiment.js"></script>
 </body>
 </html>
